# tutor-service

./: .dockerignore  .env.example  .env.minimal  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACTING_AS_A_STUDENT_FINDINGS.md  AKSIO_API_ENDPOINTS.md  API_DOCUMENTATION.md  CLAUDE.md  DOCUMENT_PROCESSING_INTEGRATION.md  Dockerfile  Dockerfile.prod  LICENSE.md  MINIMAL_SETUP.md  Makefile  README.md  debug_quiz_api.py  docker-compose.ci.yml  docker-compose.minimal.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  manage.py  mkdocs.yml  nginx.conf  prometheus.yml  pyproject.toml  setup.cfg  template.env  test_api_endpoints.py  test_chat_debug.py  test_ml.txt  test_student_flow.py  test_study_session_fix.py  test_upload_streaming.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: user-story-template.md  user-story.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  deploy.yml  deployment.yml
accounts/: README.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0003_customuser_heard_about_us_and_more.py
aksio/: asgi.py  settings.py  urls.py  wsgi.py
aksio/settings/: __init__.py  base.py  development.py  production.py  testing.py
api/: README.md  urls.py
api/docs/: swagger.py
api/v1/: ai_urls.py  analytics_urls.py  routers.py  study_urls.py  urls.py  user_urls.py
apps/accounts/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/assessments/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/billing/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/chat/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/core/: authentication.py  exceptions.py  models.py  permissions.py  serializers.py  utils.py  views.py
apps/courses/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/learning/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
assessments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
assessments/migrations/: 0001_initial.py
assessments/services/: __init__.py  spaced_repetition.py
assessments/tests/: fixtures.py  test_simple.py
backend/: requirements.txt
billing/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
billing/migrations/: 0001_initial.py
chat/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
config/docker/: Dockerfile  Dockerfile.prod  docker-compose.ci.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh
core/: README.md  admin.py  cache_service.py  celery_app.py  database_optimization.py  exceptions.py  mock_neo4j.py  models.py  monitoring.py  neo4j_client.py  permissions.py  security.py  serializers.py  swagger_utils.py  tasks.py  test_utils.py  throttling.py  urls.py  utils.py  views.py
core/services/: ai_service.py  retrieval_client.py
courses/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_document_user.py  0003_remove_chat_models.py  0004_document_file_hash_document_graph_id_and_more.py
courses/services/: document_processor.py
courses/tests/: test_models.py
demos/: adaptive_learning_demo.html  demo.html  document_upload_demo.html  unified_demo.html
docs/: README.md  REDIS_SETUP.md  REPOSITORY_STRUCTURE.md  WORKLOAD_IDENTITY_SETUP.md  docker.md  gcloud-commands.md
docs/manuals/: consumer.md  database_backup_and_recovert.md  deployment.md  setup.md  testing.md
document_processing/: admin.py  apps.py  document_service.py  embedding_service.py  knowledge_graph_service.py  models.py  scraper_client.py  topic_extraction_service.py  urls.py  views.py
document_processing/migrations/: 0001_initial.py  0002_alter_documentchunk_document_delete_documentupload.py
infrastructure/: QUICK_REFERENCE.md  README.md  deploy.md
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  CONTINUOUS_DEPLOYMENT.md  README.md  cloud-run.tf  continuous-deployment.tf  main.tf  terraform.tfvars  terraform.tfvars.example
kubernetes/: .dockerconfigjson  Chart.yaml  dev-values.yaml  prod-values.yaml  regcred-secret.yaml  staging-values.yaml  values.yaml
kubernetes/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
learning/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
learning/migrations/: 0001_initial.py
learning/services/: __init__.py  base.py  performance_analysis.py  progress_prediction.py  review_scheduling.py  study_plan_generator.py
learning/tests/: __init__.py  test_adaptive_learning_viewset.py  test_performance_analysis.py  test_progress_prediction.py  (+2 more)
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: format-code.bat  format-code.sh  get-github-logs.sh  pre-commit.sh
src/: Dockerfile  README.md  config.py  manage.py  requirements.txt  test.py
src/api/: tests.py  (+2 more)
(+138 files in other folders)
